Fixed: Horizontal scrolling

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,14 +11,12 @@
 
 /* whole page */
 body {
-	width: 100vw;
-	height: 100vh;
 	color: #1d3557;
 }
 
 .App {
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 }
 
 .cursor-pointer {
